--- a/config/dev/ruoyi-system.yml
+++ b/config/dev/ruoyi-system.yml
@@ -2,7 +2,7 @@
 dubbo:
   cloud:
     # 需要远程调用的服务 多个用逗号分割
-    subscribed-services: ruoyi-file
+    subscribed-services: ruoyi-resource
 
 spring:
   datasource:
