add 适配 docker 部署方式

--- a/ruoyi-auth/pom.xml
+++ b/ruoyi-auth/pom.xml
@@ -84,6 +84,10 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
