--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -23,16 +23,9 @@ http {
 
     upstream server {
         ip_hash;
-        server 172.30.0.60:8080;
-        server 172.30.0.61:8080;
-    }
-
-    upstream monitor-admin {
-        server 172.30.0.90:9090;
-    }
-
-    upstream xxljob-admin {
-        server 172.30.0.92:9100;
+        # gateway 地址
+        server 172.30.0.100:8080;
+        # server 172.30.0.101:8080;
     }
 
     server {
@@ -74,28 +67,6 @@ http {
             proxy_set_header REMOTE-HOST $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_pass http://server/;
-        }
-
-        # https 会拦截内链所有的 http 请求 造成功能无法使用
-        # 解决方案1 将 admin 服务 也配置成 https
-        # 解决方案2 将菜单配置为外链访问 走独立页面 http 访问
-        location /admin/ {
-            proxy_set_header Host $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header REMOTE-HOST $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass http://monitor-admin/admin/;
-        }
-
-        # https 会拦截内链所有的 http 请求 造成功能无法使用
-        # 解决方案1 将 xxljob 服务 也配置成 https
-        # 解决方案2 将菜单配置为外链访问 走独立页面 http 访问
-        location /xxl-job-admin/ {
-            proxy_set_header Host $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header REMOTE-HOST $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass http://xxljob-admin/xxl-job-admin/;
         }
 
         error_page   500 502 503 504  /50x.html;
