--- a/ruoyi-modules/pom.xml
+++ b/ruoyi-modules/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>ruoyi-system</module>
         <module>ruoyi-gen</module>
+        <module>ruoyi-job</module>
         <module>ruoyi-resource</module>
     </modules>
 
