--- a/config/dev/seata-server.properties
+++ b/config/dev/seata-server.properties
@@ -2,6 +2,7 @@ service.vgroupMapping.ruoyi-auth-group=default
 service.vgroupMapping.ruoyi-system-group=default
 service.vgroupMapping.ruoyi-resource-group=default
 service.vgroupMapping.ruoyi-gen-group=default
+service.vgroupMapping.ruoyi-job-group=default
 service.enableDegrade=false
 service.disableGlobalTransaction=false
 store.mode=db
