fix 修复 解决dubbo获取元数据satoken优先级过低 内网鉴权报错问题

--- a/ruoyi-common/ruoyi-common-dubbo/pom.xml
+++ b/ruoyi-common/ruoyi-common-dubbo/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot-starter</artifactId>
+            <version>${satoken.version}</version>
+        </dependency>
+
         <!-- Sa-Token 整合 Dubbo -->
         <dependency>
             <groupId>cn.dev33</groupId>
