--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -26,6 +26,7 @@
         <module>ruoyi-common-seata</module>
         <module>ruoyi-common-loadbalancer</module>
         <module>ruoyi-common-oss</module>
+        <module>ruoyi-common-idempotent</module>
     </modules>
 
     <artifactId>ruoyi-common</artifactId>
