--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <dynamic-ds.version>3.5.0</dynamic-ds.version>
         <velocity.version>2.3</velocity.version>
         <poi.version>4.1.2</poi.version>
+        <commons-compress.version>1.21</commons-compress.version>
         <easyexcel.version>3.0.5</easyexcel.version>
         <cglib.version>3.3.0</cglib.version>
         <hutool.version>5.7.21</hutool.version>
@@ -186,6 +187,13 @@
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
+            </dependency>
+
+            <!-- 修复poi漏洞 -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons-compress.version}</version>
             </dependency>
 
             <dependency>
