[重磅更新] 升级 dubbo 3.0 使用原生 starter 整合 减少与 feign 的无用兼容配置

--- a/config/dev/application.yml
+++ b/config/dev/application.yml
@@ -17,6 +17,13 @@ server:
 dubbo:
   application:
     logger: slf4j
+    # 可选值 interface、instance、all，默认是 all，即接口级地址、应用级地址都注册
+    register-mode: all
+    service-discovery:
+      # FORCE_INTERFACE，只消费接口级地址，如无地址则报错，单订阅 2.x 地址
+      # APPLICATION_FIRST，智能决策接口级/应用级地址，双订阅
+      # FORCE_APPLICATION，只消费应用级地址，如无地址则报错，单订阅 3.x 地址
+      migration: APPLICATION_FIRST
   protocol:
     # 使用dubbo协议通信
     name: dubbo
