--- a/ruoyi-common/ruoyi-common-loadbalancer/pom.xml
+++ b/ruoyi-common/ruoyi-common-loadbalancer/pom.xml
@@ -21,8 +21,9 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-dubbo</artifactId>
+            <groupId>org.apache.dubbo</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
