fix 修复 sentinel 控制台模块 打包 jar 命名问题

--- a/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
+++ b/ruoyi-visual/ruoyi-sentinel-dashboard/pom.xml
@@ -98,6 +98,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <pluginManagement>
             <plugins>
                 <plugin>
